Remove argLine from java 9 profile as it is not required anymore and messes up jacoco execution