@@ -526,12 +526,6 @@ Copyright ${inceptionYear}-${currentYear} the original author or authors.
       <activation>
         <jdk>[9,)</jdk>
       </activation>
-      <properties>
-        <!-- allow tests to access private fields/methods of java.base classes via reflection -->
-        <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED
-          --add-opens
-          java.base/java.io=ALL-UNNAMED --add-opens java.base/java.math=ALL-UNNAMED</argLine>
-      </properties>
       <build>
         <pluginManagement>
           <plugins>
